[tool.poetry]
name = "steam-picker"
version = "0.1.5"
description = "Pick a random game from your personal Steam library!"
authors = ["Jesse Johnson <holocronweaver>"]
license = "MPL-2.0"
readme = "README.org"
packages = [
  { include = "steampicker" },
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
requests = "^2.31.0"
steam = "^1.4.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
steam-picker = 'steampicker.steampicker:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
